Fix css z-index

--- a/webapp/components/Sign.module.css
+++ b/webapp/components/Sign.module.css
@@ -1,4 +1,5 @@
 .nav {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
